--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -13,7 +13,10 @@ dependencies:
   - nodejs >=14,<15
   - pandas
   - pip
+  - pyld
+  - pyshacl
   - python >=3.8,<3.9
+  - rdflib-jsonld
   - requests
   - pip:
     - terminusdb-client
