--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -11,6 +11,7 @@ dependencies:
   - jupyter-server-proxy
   - jupyterlab >=2.2,<3
   - matplotlib-base
+  - nbgitpuller
   - nodejs >=14,<15
   - pandas
   - pip
