Change lessons to use the new tdbpy command

--- a/getting_started/python-client/Makefile
+++ b/getting_started/python-client/Makefile
@@ -1,7 +1,7 @@
 runproject:
-	terminusdb commit
-	terminusdb importcsv Employees.csv --classname EmployeesFromCSV --id "Employee id" -e Manager -m "Import Employees from CSV"
-	python insert_data.py
-	python update_data.py
-	terminusdb branch contractors
+	tdbpy commit
+	tdbpy importcsv Employees.csv --classname EmployeesFromCSV --id "Employee id" -e Manager -m "Import Employees from CSV"
+	tdbpy insert_data.py
+	tdbpy update_data.py
+	tdbpy branch contractors
 	python add_contractors.py
